kubernetes/220331 팀프로젝트 (full container 3tier 구성)/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb
  labels:
    app: db
spec:
  ports:
  - port: 3306
    name: db
  clusterIP: None # headless
  selector:
    app: db
