kubernetes/220331 팀프로젝트 (full container 3tier 구성)/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
